[87581842] Fix padding of Compare Select on mobile

--- a/app/assets/stylesheets/_icons.css.sass
+++ b/app/assets/stylesheets/_icons.css.sass
@@ -28,7 +28,9 @@
   font-size: $font_size_h3
 
 .icon_large
-  font-size: $font_size_h2
+  font-size: $font_size_h3
+  +media($tablet_portrait_and_desktop)
+    @extend .icon_medium
 
 .icon_search:before
   content: "\F002"
